test/testData/parser/negative/expressions/initializers.err
test/testData/parser/negative/expressions/initializers.c:47:9: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:21:14: error: assigning to 'float' from incompatible type '*void'
test/testData/parser/negative/expressions/initializers.c:35:14: error: assigning to '*signed int' from incompatible type 'C double'
test/testData/parser/negative/expressions/initializers.c:43:14: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:23:15: error: assigning to 'float' from incompatible type '*void'
test/testData/parser/negative/expressions/initializers.c:33:15: error: assigning to '*signed int' from incompatible type 'C double'
test/testData/parser/negative/expressions/initializers.c:39:15: warning: incompatible integer to pointer conversion assigning to '*signed int' from 'C signed long'
test/testData/parser/negative/expressions/initializers.c:55:15: error: assigning to '*signed int' from incompatible type 'C double'
test/testData/parser/negative/expressions/initializers.c:61:15: warning: incompatible pointer types assigning to '*signed int' from 'C *signed char'
test/testData/parser/negative/expressions/initializers.c:22:19: error: initializer element is not a compile-time constant
test/testData/parser/negative/expressions/initializers.c:27:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:29:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:32:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:35:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:40:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:43:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:43:24: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:47:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:53:24: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:32:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:34:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:37:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:40:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:45:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:48:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:48:25: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:52:25: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:32:31: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:34:31: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:32:32: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:34:32: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:37:32: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:37:32: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:11:35: error: initializer element is not a compile-time constant
test/testData/parser/negative/expressions/initializers.c:11:36: error: initializer element is not a compile-time constant
test/testData/parser/negative/expressions/initializers.c:11:36: error: assigning to 'float' from incompatible type '*signed int'
test/testData/parser/negative/expressions/initializers.c:13:36: error: redefinition of 'f' with a different type: 'float' vs 'signed int[9]'
test/testData/parser/negative/expressions/initializers.c:1:37: error: definition of variable with array type needs an explicit size or an initializer
test/testData/parser/negative/expressions/initializers.c:14:38: error: array type 'signed int[20]' is not assignable
test/testData/parser/negative/expressions/initializers.c:1:45: error: variable has incomplete type 'void'
test/testData/parser/negative/expressions/initializers.c:26:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:28:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:31:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:36:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:38:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:42:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:43:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:46:46: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:46:46: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:13:47: error: scalar initializer cannot be empty
test/testData/parser/negative/expressions/initializers.c:17:47: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:21:47: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:28:47: warning: excess elements in scalar initializer
test/testData/parser/negative/expressions/initializers.c:15:49: error: assigning to '*signed int' from incompatible type 'C double'
test/testData/parser/negative/expressions/initializers.c:21:49: error: assigning to '*signed int' from incompatible type 'C double'
test/testData/parser/negative/expressions/initializers.c:16:50: error: assigning to 'float' from incompatible type '*signed int'
test/testData/parser/negative/expressions/initializers.c:25:50: error: assigning to 'float' from incompatible type '*signed int'
test/testData/parser/negative/expressions/initializers.c:14:53: error: invalid initializer
test/testData/parser/negative/expressions/initializers.c:13:55: error: assigning to 'float' from incompatible type '*signed int'
test/testData/parser/negative/expressions/initializers.c:12:57: error: assigning to 'signed int' from incompatible type 'STRUCT S'
test/testData/parser/negative/expressions/initializers.c:12:61: error: 'extern' variable cannot have an initializer
